// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField computed :: fieldProps :: should return field props 1`] = `
Object {
  "input-type": "text",
  "label-text": "First Name",
  "max-length": null,
  "name": "first-name",
  "value": "John",
}
`;

exports[`FormField computed :: fieldProps :: when field has error :: should return field props with error props 1`] = `
Object {
  "aria-describedby": undefined,
  "aria-invalid": true,
  "has-error": true,
  "input-type": "text",
  "label-text": "First Name",
  "max-length": null,
  "name": "first-name",
  "value": "John",
}
`;

exports[`FormField computed :: translations :: should return translations for form field 1`] = `
Object {
  "emptyError": "error-first-name-empty",
  "errorName": "first-name-error",
  "invalidError": "error-first-name-invalid",
  "label": "First Name",
  "name": "first-name",
  "validationMessages": Object {
    "required": "Enter First Name",
  },
}
`;
